# robomaster_s1_can_hack

./: .cproject  .gitmodules  .mxproject  LICENSE.txt  README.md  STM32F767ZITX_RAM.ld  access_point.sh  nucleo-can-ethernet-bridge.ioc
Inc/: lwipopts.h  main.h  robomaster_s1_crc.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Src/: crc.c  lwip.c  main.c  robomaster_s1_parser.c  stm32f7xx_it.c  udp.c
ros/ros_robomaster_s1_bridge/: CMakeLists.txt  package.xml
ros/ros_robomaster_s1_bridge/include/: robomaster_s1_bridge.h
ros/ros_robomaster_s1_bridge/launch/: robomaster_s1_bridge.launch  robomaster_s1_bridge_joy.launch
ros/ros_robomaster_s1_bridge/msg/: RoboMasterS1Info1.msg  RoboMasterS1Info2.msg  RoboMasterS1Info3.msg  RoboMasterS1Info4.msg  RoboMasterS1Info5.msg
ros/ros_robomaster_s1_bridge/src/: robomaster_s1_bridge.cpp
stm32f4/robomaster_s1_mikroe_stm32/: .cproject  .mxproject  .project  STM32F415RGTX_FLASH.ld  STM32F415RGTX_RAM.ld  robomaster_s1_mikroe_stm32 Debug.cfg  robomaster_s1_mikroe_stm32 Debug.launch  robomaster_s1_mikroe_stm32.ioc
stm32f4/robomaster_s1_mikroe_stm32/Core/Inc/: command_list.csv  lab201.csv  main.h  robomaster_s1.h  robomaster_s1_crc.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32f4/robomaster_s1_mikroe_stm32/Core/Src/: main.c  robomaster_s1_parser.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32f4/robomaster_s1_mikroe_stm32/USB_DEVICE/App/: usb_device.h  usbd_cdc_if.c  usbd_desc.c
stm32f7/: .cproject  .mxproject  .project  STM32F767ZITX_FLASH.ld  nucleo-can-ethernet-bridge.elf.launch  nucleo-can-ethernet-bridge.ioc
stm32f7/Inc/: command_list.csv  ethernetif.h  lwip.h  lwipopts.h  robomaster_s1.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
stm32f7/Src/: ethernetif.c  lwip.c  main.c  robomaster_s1_parser.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  udp_communication.c  usbd_cdc_if.c  usbd_desc.c
