<?xml version="1.0"?>
<package>
  <name>ros_robomaster_s1_bridge</name>
  <version>0.1.0</version>
  <description>ROS RoboMaster S1 ROS Bridge</description>
  <maintainer email="tatsuyai713@gmail.com">Tatsuya Ishikawa</maintainer>
  <license>MIT License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!-- <run_depend>message_runtime</run_depend> -->
</package>
